[Client] Minor enhancements.

--- a/client-side/src/app/pages/main/audit/audit.html
+++ b/client-side/src/app/pages/main/audit/audit.html
@@ -1,6 +1,8 @@
 <div layout="row" class="audit-wrapper">
   <div flex="25">
-    <mantl-user-select selected="audit.selected"></mantl-user-select>
+    <mantl-user-select selected="audit.selected"
+                       selected-backup-copy="audit.selectedBackupCopy">
+    </mantl-user-select>
   </div>
   <div class="section-divider"></div>
   <div flex class="section padding-large">
