--- a/client-side/src/app/components/user-select/user-select.html
+++ b/client-side/src/app/components/user-select/user-select.html
@@ -1,6 +1,6 @@
 <div class="section">
   <div class="padding-small">
-    <md-input-container class="search-query-wrapper mt">
+    <md-input-container class="search-query-wrapper">
       <label>Search user:</label>
       <input ng-model="vm.searchQuery" type="text">
     </md-input-container>
