--- a/client-side/src/app/pages/main/audit/audit.html
+++ b/client-side/src/app/pages/main/audit/audit.html
@@ -21,7 +21,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr ng-repeat="event in audit.eventData.events | filter: audit.searchQuery track by $index">
+      <tr ng-repeat="event in audit.eventData.events | filter: audit.searchQuery">
         <td>{{::event.datetime}}</td>
         <td>{{::event.application}}</td>
         <td>{{::event.action}}</td>
