[Client] Minor fixes.

--- a/client-side/src/app/components/new-user-dialog/new-user-dialog.html
+++ b/client-side/src/app/components/new-user-dialog/new-user-dialog.html
@@ -2,7 +2,7 @@
            class="new-user-dialog"
            aria-label="Add New User"
            ng-cloak>
-  <form name="newUser.form">
+  <form name="newUser.form" autocomplete="off">
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2>Add New User</h2>
