--- a/client-side/src/app/components/user-form/user-form.html
+++ b/client-side/src/app/components/user-form/user-form.html
@@ -1,3 +1,7 @@
+<!-- Fix Chrome auto-complete off -->
+<input style="display:none">
+<input type="password" style="display:none">
+
 <md-input-container>
   <label>First Name</label>
   <input ng-model="vm.user.firstName"
