[Client] Move each account info to its own directive.

--- a/client-side/src/app/pages/main/users/_users.scss
+++ b/client-side/src/app/pages/main/users/_users.scss
@@ -1,6 +1,6 @@
 .users-wrapper {
-  .cards-wrapper {
-    height: calc(100vh - 169px);
+  .accounts-wrapper {
+    height: calc(100vh - 111px);
     overflow-y: auto;
 
     md-card {
