[Client] Rename the app to UAM. Minor enhancements.

--- a/client-side/src/app/components/ad-account-info/ad-account-info.html
+++ b/client-side/src/app/components/ad-account-info/ad-account-info.html
@@ -9,11 +9,11 @@
       <b>Date of birth:</b>
     </p>
     <md-datepicker ng-model="users.birthday"></md-datepicker>
-    <mantl-templates-select templates="users.templates"
-                            possible-options-title="'All Groups:'"
-                            selected-options-title="'User Groups:'"
-                            class="mt">
-    </mantl-templates-select>
+    <uam-templates-select templates="users.templates"
+                          possible-options-title="'All Groups:'"
+                          selected-options-title="'User Groups:'"
+                          class="mt">
+    </uam-templates-select>
   </md-card>
 </div>
 <div layout="row" class="actions-wrapper"></div>
