--- a/client-side/src/app/components/general-user-info/general-user-info.html
+++ b/client-side/src/app/components/general-user-info/general-user-info.html
@@ -6,7 +6,7 @@
       </md-card-title-text>
     </md-card-title>
     <form name="vm.userForm" autocomplete="off">
-      <mantl-user-form user="vm.selectedUser" form="vm.userForm"></mantl-user-form>
+      <uam-user-form user="vm.selectedUser" form="vm.userForm"></uam-user-form>
     </form>
   </md-card>
 </div>
