--- a/client-side/src/app/components/git-account-info/git-account-info.html
+++ b/client-side/src/app/components/git-account-info/git-account-info.html
@@ -5,10 +5,10 @@
         <span class="md-headline">Git</span>
       </md-card-title-text>
     </md-card-title>
-    <mantl-templates-select templates="vm.templates"
-                            possible-options-title="'All Projects:'"
-                            selected-options-title="'User Projects:'">
-    </mantl-templates-select>
+    <uam-templates-select templates="vm.templates"
+                          possible-options-title="'All Projects:'"
+                          selected-options-title="'User Projects:'">
+    </uam-templates-select>
   </md-card>
 </div>
 <div layout="row" class="actions-wrapper"></div>
