--- a/client-side/src/app/components/jira-account-info/jira-account-info.html
+++ b/client-side/src/app/components/jira-account-info/jira-account-info.html
@@ -70,9 +70,9 @@
       Create Account
     </md-button>
 
-    <!--<mantl-templates-select templates="vm.templates"-->
+    <!--<uam-templates-select templates="vm.templates"-->
     <!--possible-options-title="'All Projects:'"-->
     <!--selected-options-title="'User Projects:'">-->
-    <!--</mantl-templates-select>-->
+    <!--</uam-templates-select>-->
   </md-card>
 </div>
