--- a/client-side/src/app/components/navbar/navbar.html
+++ b/client-side/src/app/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <md-toolbar layout="row" layout-align="center center">
 
-  <md-button>UAR-MAntl.io</md-button>
+  <md-button ui-sref="main.users" class="logo">UAM</md-button>
 
   <section flex layout="row" layout-align="left center">
     <md-button ng-repeat="link in vm.links"
