--- a/client-side/src/app/components/navbar/navbar.scss
+++ b/client-side/src/app/components/navbar/navbar.scss
@@ -1,6 +1,10 @@
-mantl-navbar {
+uam-navbar {
   md-toolbar {
     height: 63px;
+  }
+
+  .logo {
+    font-size: 28px;
   }
 
   .md-button.active {
