--- a/client-side/src/app/components/new-user-dialog/new-user-dialog.html
+++ b/client-side/src/app/components/new-user-dialog/new-user-dialog.html
@@ -17,7 +17,7 @@
         <p ng-if="newUser.error" class="error-msg">
           {{newUser.error}}
         </p>
-        <mantl-user-form user="newUser.user" form="newUser.form"></mantl-user-form>
+        <uam-user-form user="newUser.user" form="newUser.form"></uam-user-form>
       </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
