--- a/client-side/src/app/components/user-select/user-select.scss
+++ b/client-side/src/app/components/user-select/user-select.scss
@@ -1,10 +1,10 @@
-mantl-user-select {
+uam-user-select {
   .search-query-wrapper {
     padding-bottom: 0;
   }
 
   .user-list {
-    height: calc(100vh - 256px);
+    height: calc(100vh - 240px);
     min-height: 100px;
     overflow-y: auto;
   }
