--- a/client-side/src/app/pages/main/audit/audit.html
+++ b/client-side/src/app/pages/main/audit/audit.html
@@ -1,8 +1,8 @@
 <div layout="row" class="audit-wrapper">
   <div flex="25">
-    <mantl-user-select selected="audit.selectedUser"
-                       selected-backup-copy="audit.selectedUserBackupCopy">
-    </mantl-user-select>
+    <uam-user-select selected="audit.selectedUser"
+                     selected-backup-copy="audit.selectedUserBackupCopy">
+    </uam-user-select>
   </div>
   <div class="section-divider"></div>
   <div flex class="section padding-large">
