--- a/client-side/src/app/pages/main/settings/settings.html
+++ b/client-side/src/app/pages/main/settings/settings.html
@@ -36,10 +36,10 @@
               <span class="md-headline">Templates</span>
             </md-card-title-text>
           </md-card-title>
-          <mantl-templates-select templates="settings.templates"
-                                  possible-options-title="'All Groups:'"
-                                  selected-options-title="'User Groups:'">
-          </mantl-templates-select>
+          <uam-templates-select templates="settings.templates"
+                                possible-options-title="'All Groups:'"
+                                selected-options-title="'User Groups:'">
+          </uam-templates-select>
           <div layout="row">
             <md-button class="md-warn md-raised">Delete</md-button>
             <div flex></div>
@@ -62,10 +62,10 @@
               <span class="md-headline">Templates</span>
             </md-card-title-text>
           </md-card-title>
-          <mantl-templates-select templates="settings.templates"
-                                  possible-options-title="'All Groups:'"
-                                  selected-options-title="'User Groups:'">
-          </mantl-templates-select>
+          <uam-templates-select templates="settings.templates"
+                                possible-options-title="'All Groups:'"
+                                selected-options-title="'User Groups:'">
+          </uam-templates-select>
           <div layout="row">
             <md-button class="md-warn md-raised">Delete</md-button>
             <div flex></div>
@@ -105,10 +105,10 @@
                 <span class="md-headline">Templates</span>
               </md-card-title-text>
             </md-card-title>
-            <mantl-templates-select templates="settings.templates"
-                                    possible-options-title="'All Groups:'"
-                                    selected-options-title="'User Groups:'">
-            </mantl-templates-select>
+            <uam-templates-select templates="settings.templates"
+                                  possible-options-title="'All Groups:'"
+                                  selected-options-title="'User Groups:'">
+            </uam-templates-select>
             <div layout="row">
               <md-button class="md-warn md-raised">Delete</md-button>
               <div flex></div>
@@ -132,10 +132,10 @@
               <span class="md-headline">Templates</span>
             </md-card-title-text>
           </md-card-title>
-          <mantl-templates-select templates="settings.templates"
-                                  possible-options-title="'All Groups:'"
-                                  selected-options-title="'User Groups:'">
-          </mantl-templates-select>
+          <uam-templates-select templates="settings.templates"
+                                possible-options-title="'All Groups:'"
+                                selected-options-title="'User Groups:'">
+          </uam-templates-select>
           <div layout="row">
             <md-button class="md-warn md-raised">Delete</md-button>
             <div flex></div>
