--- a/client-side/src/app/pages/main/users/users.html
+++ b/client-side/src/app/pages/main/users/users.html
@@ -1,30 +1,30 @@
 <div layout="row" class="users-wrapper">
   <div flex="25">
-    <mantl-user-select selected="users.selected"
-                       selected-backup-copy="users.selectedUserBackupCopy">
-    </mantl-user-select>
+    <uam-user-select selected="users.selected"
+                     selected-backup-copy="users.selectedUserBackupCopy">
+    </uam-user-select>
   </div>
   <div class="section-divider"></div>
   <div flex layout="column">
-    <div class="section accounts-wrapper">
+    <div class="section">
       <div flex layout="row">
-        <div flex>
-          <mantl-general-user-info ng-if="users.selectedAccount === 0"
-                                   selected-user="users.selected"
-                                   user-backup-copy="users.selectedUserBackupCopy">
-          </mantl-general-user-info>
-          <mantl-gapps-account-info ng-if="users.selectedAccount === 1"
-                                    selected-user="users.selected">
-          </mantl-gapps-account-info>
-          <mantl-git-account-info ng-if="users.selectedAccount === 2"
+        <div flex class="accounts-wrapper">
+          <uam-general-user-info ng-if="users.selectedAccount === 0"
+                                 selected-user="users.selected"
+                                 user-backup-copy="users.selectedUserBackupCopy">
+          </uam-general-user-info>
+          <uam-gapps-account-info ng-if="users.selectedAccount === 1"
                                   selected-user="users.selected">
-          </mantl-git-account-info>
-          <mantl-jira-account-info ng-if="users.selectedAccount === 3"
-                                   selected-user="users.selected">
-          </mantl-jira-account-info>
-          <mantl-ad-account-info ng-if="users.selectedAccount === 4"
+          </uam-gapps-account-info>
+          <uam-git-account-info ng-if="users.selectedAccount === 2"
+                                selected-user="users.selected">
+          </uam-git-account-info>
+          <uam-jira-account-info ng-if="users.selectedAccount === 3"
                                  selected-user="users.selected">
-          </mantl-ad-account-info>
+          </uam-jira-account-info>
+          <uam-ad-account-info ng-if="users.selectedAccount === 4"
+                               selected-user="users.selected">
+          </uam-ad-account-info>
         </div>
         <div layout="column" class="buttons-wrapper">
           <md-button ng-repeat="account in users.accounts"
