--- a/client-side/src/app/pages/main/users/users.html
+++ b/client-side/src/app/pages/main/users/users.html
@@ -10,8 +10,7 @@
       <div flex layout="row">
         <div flex class="accounts-wrapper">
           <uam-general-user-info ng-if="users.selectedAccount === 0"
-                                 selected-user="users.selected"
-                                 user-backup-copy="users.selectedUserBackupCopy">
+                                 selected-user="users.selected">
           </uam-general-user-info>
           <uam-gapps-account-info ng-if="users.selectedAccount === 1"
                                   selected-user="users.selected">
