[Client] AD account directive minor fixes

--- a/client-side/src/app/pages/main/users/_users.scss
+++ b/client-side/src/app/pages/main/users/_users.scss
@@ -5,6 +5,11 @@
 
     md-card {
       padding: $offset-standard;
+
+      button {
+        width: 150px;
+        margin-left: 0 !important;
+      }
     }
   }
 }
